--- a/res/application/views/components/boton_telefono.html.twig
+++ b/res/application/views/components/boton_telefono.html.twig
@@ -1,3 +1,4 @@
+{% if usuario.celular != "" %}
 <div class="row">
     <div class="col-xs-12">
         <button class="btn btn-block btn-lg color-naranja">
@@ -6,3 +7,4 @@
         </button>
     </div>
 </div>
+{% endif %}
