--- a/res/application/views/components/SEO.html.twig
+++ b/res/application/views/components/SEO.html.twig
@@ -17,6 +17,6 @@
 <meta name="twitter:description" content="{{empresa.descripcion}}">
 <meta name="twitter:image" content="{{base_url()}}uploads/logos/{{empresa.logo}}">
 <!-- Aca se debe imprimir la descripción corta (Crear la descripción con indicaciones de Andres) -->
-<meta name="description" content="{{empresa.tipo}} {{empresa.nombre}} en {{usuario.ciudad}}, {{usuario.departamento}}, {{usuario.pais}}">
+<meta name="description" content="{{ descripcion }}">
 <!-- las etiquetas -->
 <meta name="keywords" content="{{tags}}">
